--- a/myapp/templates/myapp/index.html
+++ b/myapp/templates/myapp/index.html
@@ -27,9 +27,9 @@
                 <td>{{x.firstname}}</td>
                 <td>{{x.lastname}}</td>
                 <td>{{x.country}}</td>
-                <td>
-                    <a href=""><button id="up">update</button></a>
-                </td>
+                    <td>
+                        <a href="{% url 'update' x.id %}"><button id="up">update</button></a>
+                    </td>
                 <td>
                     <a href="{% url 'delete' x.id %}"><button id="del">delete</button></a>
                 </td>
